test_out/cpp_stl_11/make.stderr
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp:3:
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1759:31: error: call to implicitly-deleted copy constructor of 'std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1670:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > >::construct<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >, const std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1516:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > > >::__construct<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >, const std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:1582:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > > >::construct<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >, const std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp:30:23: note: in instantiation of member function 'std::__1::vector<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >, std::__1::allocator<std::__1::unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> > > >::push_back' requested here
            m_blocks->push_back(_);
                      ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy constructor is implicitly deleted because 'unique_ptr<index_to_param_until_t::block_t, std::__1::default_delete<index_to_param_until_t::block_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/index_to_param_until.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.h:54:40: error: member reference base type 'const uint32_t' (aka 'const unsigned int') is not a structure or union
    uint32_t bar() const { return m_bar.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:40:11: error: object of type 'std::__1::unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >' cannot be assigned because its copy assignment operator is implicitly deleted
    m_foo = p_foo;
          ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy assignment operator is implicitly deleted because 'unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:55:11: error: object of type 'std::__1::unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >' cannot be assigned because its copy assignment operator is implicitly deleted
    m_foo = p_foo;
          ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy assignment operator is implicitly deleted because 'unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:3032:32: error: no matching constructor for initialization of 'params_pass_struct_t::struct_type_t'
    return unique_ptr<_Tp>(new _Tp(_VSTD::forward<_Args>(__args)...));
                               ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:18:18: note: in instantiation of function template specialization 'std::__1::make_unique<params_pass_struct_t::struct_type_t, params_pass_struct_t::block_t *, kaitai::kstream *&, params_pass_struct_t *, params_pass_struct_t *&>' requested here
    m_one = std::make_unique<struct_type_t>(first(), m__io, this, m__root);
                 ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:37:38: note: candidate constructor not viable: no known conversion from 'params_pass_struct_t::block_t *' to 'std::unique_ptr<kaitai::kstruct>' for 1st argument
params_pass_struct_t::struct_type_t::struct_type_t(std::unique_ptr<kaitai::kstruct> p_foo, kaitai::kstream* p__io, params_pass_struct_t* p__parent, params_pass_struct_t* p__root) : kaitai::kstruct(p__io) {
                                     ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:51:11: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
    class struct_type_t : public kaitai::kstruct {
          ^
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:3:
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:3032:32: error: no matching constructor for initialization of 'params_pass_struct_t::struct_type_t::baz_t'
    return unique_ptr<_Tp>(new _Tp(_VSTD::forward<_Args>(__args)...));
                               ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:46:18: note: in instantiation of function template specialization 'std::__1::make_unique<params_pass_struct_t::struct_type_t::baz_t, kaitai::kstruct *, kaitai::kstream *&, params_pass_struct_t::struct_type_t *, params_pass_struct_t *&>' requested here
    m_bar = std::make_unique<baz_t>(foo(), m__io, this, m__root);
                 ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp:52:45: note: candidate constructor not viable: no known conversion from 'kaitai::kstruct *' to 'std::unique_ptr<kaitai::kstruct>' for 1st argument
params_pass_struct_t::struct_type_t::baz_t::baz_t(std::unique_ptr<kaitai::kstruct> p_foo, kaitai::kstream* p__io, params_pass_struct_t::struct_type_t* p__parent, params_pass_struct_t* p__root) : kaitai::kstruct(p__io) {
                                            ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.h:64:15: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
        class baz_t : public kaitai::kstruct {
              ^
4 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_struct.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp:40:11: error: object of type 'std::__1::unique_ptr<params_pass_usertype_t::block_t, std::__1::default_delete<params_pass_usertype_t::block_t> >' cannot be assigned because its copy assignment operator is implicitly deleted
    m_foo = p_foo;
          ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy assignment operator is implicitly deleted because 'unique_ptr<params_pass_usertype_t::block_t, std::__1::default_delete<params_pass_usertype_t::block_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:3032:32: error: no matching constructor for initialization of 'params_pass_usertype_t::param_type_t'
    return unique_ptr<_Tp>(new _Tp(_VSTD::forward<_Args>(__args)...));
                               ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp:18:18: note: in instantiation of function template specialization 'std::__1::make_unique<params_pass_usertype_t::param_type_t, params_pass_usertype_t::block_t *, kaitai::kstream *&, params_pass_usertype_t *, params_pass_usertype_t *&>' requested here
    m_one = std::make_unique<param_type_t>(first(), m__io, this, m__root);
                 ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp:37:39: note: candidate constructor not viable: no known conversion from 'params_pass_usertype_t::block_t *' to 'std::unique_ptr<block_t>' for 1st argument
params_pass_usertype_t::param_type_t::param_type_t(std::unique_ptr<block_t> p_foo, kaitai::kstream* p__io, params_pass_usertype_t* p__parent, params_pass_usertype_t* p__root) : kaitai::kstruct(p__io) {
                                      ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.h:51:11: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 4 were provided
    class param_type_t : public kaitai::kstruct {
          ^
2 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/params_pass_usertype.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:3:
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1759:31: error: call to implicitly-deleted copy constructor of 'std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1670:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > >::construct<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1516:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > > >::__construct<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:1582:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > > >::construct<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:24:22: note: in instantiation of member function 'std::__1::vector<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >, std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> > > >::push_back' requested here
            m_first->push_back(_);
                     ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy constructor is implicitly deleted because 'unique_ptr<repeat_until_complex_t::type_u1_t, std::__1::default_delete<repeat_until_complex_t::type_u1_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1759:31: error: call to implicitly-deleted copy constructor of 'std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1670:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > >::construct<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1516:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > > >::__construct<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:1582:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > > >::construct<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >, const std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp:34:23: note: in instantiation of member function 'std::__1::vector<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >, std::__1::allocator<std::__1::unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> > > >::push_back' requested here
            m_second->push_back(_);
                      ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy constructor is implicitly deleted because 'unique_ptr<repeat_until_complex_t::type_u2_t, std::__1::default_delete<repeat_until_complex_t::type_u2_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
2 errors generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_complex.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp:3:
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1759:31: error: call to implicitly-deleted copy constructor of 'std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1670:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > >::construct<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >, const std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1516:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > > >::__construct<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >, const std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:1582:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > > >::construct<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >, const std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp:30:24: note: in instantiation of member function 'std::__1::vector<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >, std::__1::allocator<std::__1::unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> > > >::push_back' requested here
            m_records->push_back(_);
                       ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy constructor is implicitly deleted because 'unique_ptr<repeat_until_sized_t::record_t, std::__1::default_delete<repeat_until_sized_t::record_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/repeat_until_sized.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.h:55:40: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
    uint64_t len() const { return m_len.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:335: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                              ^  ~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:396: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                                                                                           ^  ~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:75:457: warning: shift count >= width of type [-Wshift-count-overflow]
    m_value = (((((((groups()->at(0)->value() + ((len() >= 2) ? ((groups()->at(1)->value() << 7)) : (0))) + ((len() >= 3) ? ((groups()->at(2)->value() << 14)) : (0))) + ((len() >= 4) ? ((groups()->at(3)->value() << 21)) : (0))) + ((len() >= 5) ? ((groups()->at(4)->value() << 28)) : (0))) + ((len() >= 6) ? ((groups()->at(5)->value() << 35)) : (0))) + ((len() >= 7) ? ((groups()->at(6)->value() << 42)) : (0))) + ((len() >= 8) ? ((groups()->at(7)->value() << 49)) : (0)));
                                                                                                                                                                                                                                                                                                                                                                                                                                                                        ^  ~~
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:3:
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1759:31: error: call to implicitly-deleted copy constructor of 'std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >'
            ::new((void*)__p) _Up(_VSTD::forward<_Args>(__args)...);
                              ^   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1670:18: note: in instantiation of function template specialization 'std::__1::allocator<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > >::construct<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >, const std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > &>' requested here
            {__a.construct(__p, _VSTD::forward<_Args>(__args)...);}
                 ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:1516:14: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > > >::__construct<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >, const std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > &>' requested here
            {__construct(__has_construct<allocator_type, _Tp*, _Args...>(),
             ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:1582:25: note: in instantiation of function template specialization 'std::__1::allocator_traits<std::__1::allocator<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > > >::construct<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >, const std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > &>' requested here
        __alloc_traits::construct(this->__alloc(),
                        ^
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp:24:23: note: in instantiation of member function 'std::__1::vector<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >, std::__1::allocator<std::__1::unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> > > >::push_back' requested here
            m_groups->push_back(_);
                      ^
/Applications/Xcode-9.4.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:2394:3: note: copy constructor is implicitly deleted because 'unique_ptr<vlq_base128_le_t::group_t, std::__1::default_delete<vlq_base128_le_t::group_t> >' has a user-declared move constructor
  unique_ptr(unique_ptr&& __u) noexcept
  ^
3 warnings and 1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/vlq_base128_le.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/yaml_ints.cpp:43:21: warning: implicit conversion from 'unsigned long long' to 'int32_t' (aka 'int') changes value from 18446744073709551615 to -1 [-Wconstant-conversion]
    m_test_u8_dec = 18446744073709551615ULL;
                  ~ ^~~~~~~~~~~~~~~~~~~~~~~
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/yaml_ints.cpp:51:21: warning: implicit conversion from 'unsigned long long' to 'int32_t' (aka 'int') changes value from 18446744073709551615 to -1 [-Wconstant-conversion]
    m_test_u8_hex = 18446744073709551615ULL;
                  ~ ^~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_nested.cpp:4:10: fatal error: 'cast_nested.h' file not found
#include <cast_nested.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_nested.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_imported.cpp:3:10: fatal error: 'cast_to_imported.h' file not found
#include <cast_to_imported.h>
         ^~~~~~~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_imported.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_cast_to_top.cpp:4:10: fatal error: 'cast_to_top.h' file not found
#include <cast_to_top.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_cast_to_top.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_non_standard.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/non_standard.h:54:40: error: member reference base type 'const uint32_t' (aka 'const unsigned int') is not a structure or union
    uint32_t bar() const { return m_bar.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_non_standard.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_process_coerce_switch.cpp:4:10: fatal error: 'process_coerce_switch.h' file not found
#include <process_coerce_switch.h>
         ^~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_process_coerce_switch.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_cast.cpp:3:10: fatal error: 'switch_cast.h' file not found
#include <switch_cast.h>
         ^~~~~~~~~~~~~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_cast.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_integers.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_integers2.cpp:4:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_integers2.h:55:40: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
    uint64_t len() const { return m_len.get(); }
                                  ~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_integers.cpp.o] Error 1
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_integers2.cpp.o] Error 1
In file included from /Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_multi_bool_ops.cpp:3:
/Users/travis/build/kaitai-io/ci_targets/tests/compiled/cpp_stl_11/switch_multi_bool_ops.h:54:46: error: member reference base type 'const uint64_t' (aka 'const unsigned long long') is not a structure or union
        uint64_t body() const { return m_body.get(); }
                                       ~~~~~~^~~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_multi_bool_ops.cpp.o] Error 1
/Users/travis/build/kaitai-io/ci_targets/tests/spec/cpp_stl_11/test_switch_repeat_expr.cpp:16:24: error: cannot cast from type 'std::__1::__vector_base<std::__1::unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >, std::__1::allocator<std::__1::unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> > > >::value_type' (aka 'std::__1::unique_ptr<kaitai::kstruct, std::__1::default_delete<kaitai::kstruct> >') to pointer type 'switch_repeat_expr_t::one_t *'
    BOOST_CHECK_EQUAL((static_cast<switch_repeat_expr_t::one_t*>(r->body()->at(0)))->first(), std::string("Stuff\0Me\0", 9));
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/local/include/boost/test/tools/old/interface.hpp:153:81: note: expanded from macro 'BOOST_CHECK_EQUAL'
    ::boost::test_tools::tt_detail::equal_impl_frwd(), "", CHECK, CHECK_EQUAL, (L)(R) )
                                                                                ^
/usr/local/include/boost/test/tools/old/interface.hpp:72:61: note: expanded from macro 'BOOST_TEST_TOOL_IMPL'
        BOOST_JOIN( BOOST_TEST_TOOL_PASS_ARGS, frwd_type )( ARGS ) );           \
                                                            ^~~~
/usr/local/include/boost/test/tools/old/interface.hpp:55:57: note: expanded from macro 'BOOST_TEST_TOOL_PASS_ARGS0'
    BOOST_PP_SEQ_FOR_EACH( BOOST_TEST_TOOL_PASS_ARG, _, ARGS )
                                                        ^~~~
note: (skipping 13 expansions in backtrace; use -fmacro-backtrace-limit=0 to see all)
/usr/local/include/boost/preprocessor/seq/elem.hpp:43:60: note: expanded from macro 'BOOST_PP_SEQ_ELEM_II'
#    define BOOST_PP_SEQ_ELEM_II(im) BOOST_PP_SEQ_ELEM_III(im)
                                                           ^~
/usr/local/include/boost/preprocessor/seq/elem.hpp:44:41: note: expanded from macro 'BOOST_PP_SEQ_ELEM_III'
#    define BOOST_PP_SEQ_ELEM_III(x, _) x
                                        ^
/usr/local/include/boost/test/tools/old/interface.hpp:51:49: note: expanded from macro 'BOOST_TEST_TOOL_PASS_ARG'
#define BOOST_TEST_TOOL_PASS_ARG( r, _, arg ) , arg, BOOST_STRINGIZE( arg )
                                                ^~~
1 error generated.
make[2]: *** [CMakeFiles/ks_tests.dir/test_switch_repeat_expr.cpp.o] Error 1
make[2]: Target `CMakeFiles/ks_tests.dir/build' not remade because of errors.
make[1]: *** [CMakeFiles/ks_tests.dir/all] Error 2
make[1]: Target `all' not remade because of errors.
make: *** [all] Error 2
make: Target `default_target' not remade because of errors.
